# actions-test

./: .dockerignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: learn-github-actions.yml  pr.yml  staging-push.yml  tester.yml
src/: action.py
src/tests/: test_mul.py
