
[project]
name = "actions-test"
version = "0.1.0"
description = ""
authors = [
    {name = "alex", email = "alex@spaero.bio"},
]
dependencies = [
    "numpy>=1.25.0",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.4.0",
    "mypy>=1.4.1",
    "python-lsp-server[all]>=1.7.3",
]

[tool.pdm.scripts]
test = "pytest"
